[project]
name = "llama-qrlhf"
version = "0.0.1"
description = "Q-RLHF Llama"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'transformers',
    'attention mechanism',
    'reinforcement learning',
  ]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
  ]

dependencies = [
    'accelerate',
    'beartype',
    'ema-pytorch',
    'einops>=0.8.0',
    'torch>=2.0'
]

[project.urls]
Homepage = "https://pypi.org/project/llama-qrlhf/"
Repository = "https://github.com/lucidrains/llama-qrlhf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]

test = [
    "pytest",
]

[tool.ruff]
line-length = 1000

lint.ignore = [
    "F722", # for jaxtyping shape annotation
    "F401",
    "F821",
    "E402"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["llama_qrlhf"]
